kubernetes/daemon-example.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-ds
spec:
  template:
    metadata:
      labels:
      name: fluentd
    spec:
      containers:
        - name: fluentd
          image: gcr.io/google-containers/fleuntd-elasticsearch:5.0.0
  selector:
    matchLabels:
      name: fluentd
