kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:  #matchLabels supports replicaSets,Deployments, Jobs, DaemonSet # No matchLabels on older resources such as ReplicationControllers and Services.
      app: bookapi
#      role:
#      tier:
  template:
    metadata:
      labels:
        app: bookapi
#        role:
#        tier:
    spec:
      containers:
        - name: bookapi
          image: shohagrana64/bookapi:latest
#          resources:
#            requests:
#              cpu: 100m
#              memory: 100Mi

          ports:
            - containerPort: 80
