kubernetes/statefulSet-example.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"
  replicas: 3
  template:
    metadata:
      labels:
      app: nginx
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: fluentd
          image: k8s.gcr.io/nginx-slim:0.8
          ports:
          - containerPort: 80
            name: web
          volumeMounts:
          - name: www
            mountPath: /usr/share/niginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
