kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  #namespace: monitoring
  name: bookapi-svc
  labels:
    app: bookapi
#    app.kubernetes.io/component: prometheus
#    app.kubernetes.io/name: prometheus
#    app.kubernetes.io/part-of: kube-prometheus
#    prometheus: k8s
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "10000"
#    tier:
spec:
  type: NodePort #ClusterIp / LoadBalancer
  ports:
    - port: 10000
      nodePort: 30080
      name: web
#      targetPort:
#      protocol: TCP
  selector:
    app: bookapi
#    tier:
